[package]
name = "marketx-escrow"
version = "0.1.0"
edition = "2021"
authors = ["MarketX"]
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.4.0"

[dev-dependencies]
soroban-sdk = { version = "21.4.0", features = ["testutils"] }
soroban-token-contract = { version = "21.4.0", features = ["testutils"] }

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
panic = "abort"

[profile.dev]
panic = "abort"