[workspace]
resolver = "2"
members = [
  "contracts/*",
]

# ---------------------------------------------------------------------------
# Shared dependencies — referenced by individual contracts via
# `{ workspace = true }` to keep versions consistent across all crates.
# ---------------------------------------------------------------------------
[workspace.dependencies]
soroban-sdk = "25"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# Enable logging in release builds for local debugging; do not deploy this.
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
